Fixed issue that was causing an ohorizontal overflow

--- a/src/styles/_layer.css
+++ b/src/styles/_layer.css
@@ -12,7 +12,7 @@ $purple: #4600b0;
     min-height: 700px;
     width: 100%;
     max-width: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
   }
 
   &-screen {
